# LabWork3

./: CMakeLists.txt  LabWork3.sln
Do_while/: Do_while.vcxproj  Do_while.vcxproj.filters  Header.h  func1.cpp  func2.cpp  func3.cpp  func4.cpp  func5.cpp  task1_do_while.cpp
For/: For.vcxproj  For.vcxproj.filters  Header.h  func1.cpp  func2.cpp  func3.cpp  func4.cpp  func5.cpp  task1_for.cpp
While/: While.vcxproj  While.vcxproj.filters  func1.cpp  func2.cpp  func3.cpp  func4.cpp  func5.cpp  task1_while.cpp
